# blockchain

./: .gitignore  README  README.md  block.py  block2.py  docker-compose.yaml  example_operations.py  pyproject.toml  setup.cfg  tests.py
.github/workflows/: blockchain.yml
blockchain/: Makefile  manage.py  text.txt
blockchain/blockchain/: admin.py  asgi.py  models.py  settings.py  tests.py  urls.py  wsgi.py
blockchain/blockchain/api/: __init__.py  fields.py  serializers.py  urls.py  views.py
blockchain/blockchain/dtos/: __init__.py  block.py  chain.py  converters.py  transaction.py
blockchain/blockchain/migrations/: 0001_initial.py  0002_alter_block_proof.py  0003_create_initial_block.py  0004_alter_block_previous_hash.py  0005_alter_block_timestamp.py  0006_chain.py  0007_setup_blockchain.py
blockchain/blockchain/tests/: __init__.py  block.py  chain.py  consts.py  transaction.py  utils.py
blockchain/wallets/: admin.py  models.py  rsa.py  tests.py
blockchain/wallets/migrations/: 0001_initial.py  0002_wallet_private_key_wallet_public_key.py  0003_create_initial_sender_and_recipient.py
example_schema/: base_types.py  converter.py  converters.py  schema.py
p2p_network-main/: commands.py  genesis_node.py  message.py  network.py  node.py  node1.py  node2.py
p2p_network-main/helpers/: cmd_helper.py  terminal_helper.py
p2p_network-main/settings/: includes.py
schema/: consts.py  converters.py  schema.py
