[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Bartek Trybała, Amro Okasha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cattrs = "^22.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
