[tool.poetry]
name = "blockchain"
version = "0.1.0"
description = ""
authors = ["Bartek Trybała, Amro Okasha"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cattrs = "^22.2.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
django = "^4.2.2"
django-extensions = "^3.2.3"
werkzeug = "^2.3.5"
cryptography = "^41.0.1"
dj-database-url = "^2.0.0"
psycopg = "^3.1.9"
django-sortedm2m = "^3.1.1"
tomli = "^2.0.1"
rich = "^13.4.1"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
